Change layout for content on home page and add portfolio info

--- a/index.html
+++ b/index.html
@@ -85,82 +85,106 @@
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
-    <!-- Content section-->
-    <section class="personal-content">
-        <section class="personal-section">
-            <div class="container-fluid container-custom">
-                <div class="row">
-                    <div class="col-sm-12">
-                    <!-- Hero Image for Mobile & Tablet -->
-                        <div class="hero-image-mobile" style="background-image: url(assets/images/franciska-du-toit-homepage-image.jpg);">
-                        </div>
-                    <!-- Hero Image for Mobile & Tablet end-->
-                    <!-- Intro text-->
-                        <div class="personal-content-container">
-                            <h2 class="about-heading">Hi, I am Franciska Du Toit - 
-                            <br> UX Designer, Problem Solver and Software Developer in the making. </h2>
+    <!-- Content Section -->
+			<div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="col-sm-12 intro-content">
+                            <h1 class="home-heading">Hi, I am Franciska Du Toit - 
+                            <br> UX Designer, Problem Solver and Software Developer in the making. </h1>
                             <p>My goal is to inspire people to explore, learn and challenge the norm so that we change the world.</p>
                         </div>
-                    <!-- Intro text end-->
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- Personal info-->
-        <section class="personal-section">
-            <div class="container-fluid container-custom">
-                <div class="row ">
-                    <div class="col-12 col-md-6 bullet">
-                    <!-- Personal Info Bullets -->
-                        <div class="bullet-icon"><i class="fas fa-map-marker-alt"></i></div>
-                        <div class="bullet-text">Based In Ireland</div>
+                <!-- Intro text end-->
+                <!-- Personal info-->
+                    <div class="container-fluid container-custom ">
+                        <div class="row bullet-list ">
+                            <div class="col-12 col-md-6 bullet">
+                            <!-- Personal Info Bullets ------->
+                            <div class="bullet-icon">
+                                <i class="fas fa-map-marker-alt" alt="map-icon"></i>
+                            </div>
+                                <div class="bullet-text">Based In Ireland
+                                </div>
+                        </div>
+                        <div class="col-12 col-md-6 bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-graduation-cap"></i>
+                            </div>
+                                <div class="bullet-text">Qualified in UX Design
+                                </div>
+                        </div>
+                        <div class="col-12 col-md-6 bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-code"></i>
+                            </div>
+                                <div class="bullet-text">Studying Software Development
+                                </div>
+                        </div>
+                        <div class="col-12 col-md-6 bullet">
+                            <div class="bullet-icon">
+                                <i class="fas fa-anchor"></i>
+                            </div>
+                                <div class="bullet-text">Learning to Sail
+                                </div>
+                        </div>
+                        <!-- Personal Info Bullets End ------->
                     </div>
-                    <div class="col-12 col-md-6 bullet">
-                        <div class="bullet-icon"><i class="fas fa-graduation-cap"></i></div>
-                        <div class="bullet-text">Qualified in UX Design</div>
                     </div>
-                    <div class="col-12 col-md-6 bullet">
-                        <div class="bullet-icon"><i class="fas fa-code"></i></div>
-                        <div class="bullet-text">Studying Software Development</div>
-                    </div>
-                    <div class="col-12 col-md-6 bullet">
-                        <div class="bullet-icon"><i class="fas fa-anchor"></i></div>
-                        <div class="bullet-text">Learning to Sail</div>
-                    </div>
-                    <!-- Personal Info Bullets End -->
                     <!-- Button to about page -->
                     <div class="about-btn-container">
                         <div class="btn">
-                            <a href="about.html" class="list-btn-item list-btn-item-secondary ">More about me
+                            <a href="about2.html" class="list-btn-item list-btn-item-secondary ">More about me
                             </a>
                         </div>
                     </div>
                     <!-- Button to about page end -->
-                    <!-- Quote for tablet and desktop -->
-                    <div class="quote-container">
+                        
+                        <!-- Quote ---------------------->
+                        <div class="quote-container">
                         <blockquote class="blockquote">
-                            <p class="quote-text">“I believe we don't have to settle. I believe we have to explore and take a leap of faith. It is never too late to find inspiration so that we can live a more fulfilled life.”
-                            </p>
+                            <p class="quote-text">“I believe we don't have to settle. I believe we have to explore and take a leap of faith. It is never too late to find inspiration so that we can live a more fulfilled life.”</p>
                         </blockquote>
-                    </div>
-                    <!-- Quote for tablet and desktop end -->
-                </div>
+                        <!-- Quote end-------------->
+                        </div>
+                <!-- Intro text-->
+                            <div class="portfolio-text-container" >
+                                <h2 class="portfolio-heading" ><a name="portfolio"></a>
+                                Collection of Projects & Case Studies 
+                                </h2>
+                                <p class="portfolio-paragraph">
+                                I enjoy working on different types of projects. Click below to see some of the work in my portfolio.
+                                </p>
+                            </div>
+                    <!-- Intro text end-->
+                    <!--Blocks to projects -->
+                            <div class="container-fluid blocks">
+                                <div class="row">
+                                    <div class="col nav-container">
+                                        <ul id="nav" class="list-inline menucontainer">
+                                            <li class="col-6 list-inline-item menu-color-ui menu-item-dark">
+                                                <a href="uichallenges.html" class="hvr-sweep-to-bottom"><span>UI Challenges</span></a>
+                                            </li>
+                                            <li class="col-6 list-inline-item menu-color-ux menu-item-dark ">
+                                                <a href="uxcasestudies.html" class="hvr-sweep-to-bottom"><span>UX Case Studies</span></a>
+                                            </li>
+                                            <li class="col-6 list-inline-item menu-color-code menu-item">
+                                                <a href="codingprojects.html" class="hvr-sweep-to-bottom"><span>Developer Portfolio</span></a>
+                                            </li>
+                                            <li class="col-6 list-inline-item menu-color-other menu-item">
+                                                <a href="otherprojects.html" class="hvr-sweep-to-bottom"><span>Other Projects</span></a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                    <!--Blocks to projects End -->
             </div>
-        </section>
-        <!-- Social Footer for mobile and tablet end -->
-        <section class="hero-image-footer-mobile">
-            <ul class="social-list">
-                <li><a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
-                <li><a href="https://www.instagram.com/designed.byfranciska/" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://twitter.com/FranciskaDuToit" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
-            </ul>
-        </section>
-        <!-- Social Footer for mobile and tablet end -->
-        <!-- Personal info end -->
-    </section>
-    <!-- Content section end -->
+            <!--Content Section End-->
+        </div>
     </div>
+    
 <!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
