--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
     <!-- Hover.css CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
-    <!-- Fontawesom Icons -->
+    <!-- Fontawesome Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- CSS style sheet -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -23,35 +23,43 @@
 
 
 <body>
+    <body>
     <!-- Nav Menu Section Code from Bootstrap-->
     <div class="site-header"> 
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark " style="background-color: rgba(0,0,0,.5)">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Franciska Du Toit
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+	<nav class="navbar navbar-expand-md fixed-top navbar-dark ">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="index.html">Franciska Du Toit</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse " id="navbarNav" >
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown show">
+                        <a class=" dropdown-toggle nav-link" href="#portfolio" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Portfolio
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="uichallenges.html">UI Challenges</a>
+                            <a class="dropdown-item" href="uxcasestudies.html">UX Case Studies</a>
+                            <a class="dropdown-item" href="codingprojects.html">Developer Portfolio</a>
+                            <a class="dropdown-item" href="otherprojects.html">Other Projects</a>
+                        </div>
+                    </li>
+					<li class="nav-item">
+						<a class="nav-link" href="about2.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contact2.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
     </div>
     <!-- Nav Menu end -->
+    
     <div class="container">
     <!-- Hero Image for Desktop -->
     <section class="hero-image " style="background-image: url(assets/images/franciska_du_toit_aboutpage_image.jpg);">
