--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </div>
                     </li>
 					<li class="nav-item">
-						<a class="nav-link" href="about2.html">About</a>
+						<a class="nav-link" href="about.html">About</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contact2.html">Contact</a>
