Update content structure for about page

--- a/about.html
+++ b/about.html
@@ -87,22 +87,20 @@
                 <!-- Social Banner end -->
             </div>
             <!-- Banner section End -->
-    <!-- Content section -->
-    <section class="personal-content">
-        <section class="personal-section">
-            <div class="container-fluid container-custom">
-                <div class="row">
-                    <div class="col-sm-12">
-                    <!-- Hero Image for Mobile & Tablet -->
-                        <div class="hero-image-mobile" style="background-image: url(assets/images/franciska_du_toit_aboutpage_image.jpg);">
-                        </div>
-                    <!-- Hero Image for Mobile & Tablet end -->
-                        <div class="col-12 about-info-container">
-                    <!-- Intro quote -->
+    <!-- Content Section -->
+			<div class="col-sm-12 col-md-12 col-lg-6 split-content"> 
+                <div class="container-fluid container-custom">
+                    <div class="row">
+                        <div class="col-sm-12 intro-content">
+                            <!-- Intro quote -->
                             <blockquote class="blockquote about-quote">
                                 <p class="quote-text">“My vision for us is to see the unlimited potential in the things we do and create. We might just change the world...”</p>
                             </blockquote>
-                    <!-- Intro quote end -->
+                            <!-- Intro quote end -->
+                        </div>
+                    </div>
+                </div>
+                <!-- Intro text end-->
                     <!-- Projects -->
                             <div class="project-timeline-container">
                                 <h1 class="project-timeline-heading" >
