Change layout for projects and qualifications content on about page

--- a/about.html
+++ b/about.html
@@ -101,33 +101,35 @@
                     </div>
                 </div>
                 <!-- Intro text end-->
-                    <!-- Projects -->
-                            <div class="project-timeline-container">
-                                <h1 class="project-timeline-heading" >
-                                What I have been up to
-                                </h1>
-                            <!-- original code credit for list: https://austinknight.com/ and  https://getbootstrap.com/docs/4.0/components/list-group/ with customisation -->
+                <!-- Projects -->
+                <div class="project-timeline-container">
+                    <h1 class="project-timeline-heading" >
+                        What I have been up to
+                    </h1>
+                <!-- original code credit for list: https://austinknight.com/ and  https://getbootstrap.com/docs/4.0/components/list-group/ with customisation -->
                                 <div class="timeline-line"></div>
                             <!-- Project timeline -->
-                                    <div class="project-timeline-tab">
-                                        <div class="project-list list-group" id="list-tab" role="tablist">
-                                            <a class="timeline-event inline-block tab-link list-group-item list-group-item-action active"
+                                <div class="container">
+                                    <div class="row project-timeline-tab">
+                                        <div class="col project-list list-group" id="list-tab" role="tablist">
+                                            <a class=" inline-block tab-link list-group-item list-group-item-action active timeline-event"
                                             id="list-home-list"  href="#list-home" role="tab" data-toggle="list" aria-controls="home">
-                                                <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
+                                                <img src="assets/images/franciska_du_toit_sanlam-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a class="timeline-event inline-block tab-link list-group-item list-group-item-action" id="list-profile-list" data-toggle="list"  href="#list-profile" role="tab" aria-controls="profile">
-                                                <img src="assets/images/franciska_du_toit_fincede-project.png" width="25" alt="">
+                                            <a class=" inline-block tab-link list-group-item list-group-item-action  timeline-event" id="list-profile-list" data-toggle="list"  href="#list-profile" role="tab" aria-controls="profile">
+                                                <img src="assets/images/franciska_du_toit_fincede-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a  class="timeline-event inline-block tab-link list-group-item list-group-item-action" id="list-messages-list"  href="#list-messages" data-toggle="list" role="tab" aria-controls="messages">
-                                                <img src="assets/images/franciska_du_toit_sanlam-project.png" width="25" alt="">
+                                            <a  class="inline-block tab-link list-group-item list-group-item-action " id="list-messages-list timeline-event"  href="#list-messages" data-toggle="list" role="tab" aria-controls="messages">
+                                                <img src="assets/images/franciska_du_toit_sanlam-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a class="timeline-event inline-block tab-link list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">
-                                            <img src="assets/images/franciska_du_toit_quadient-project.png" width="25" alt="">
+                                            <a class="inline-block tab-link list-group-item list-group-item-action " id="list-settings-list timeline-event" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">
+                                            <img src="assets/images/franciska_du_toit_quadient-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a class="timeline-event inline-block tab-link list-group-item list-group-item-action" id="list-contact-list" data-toggle="list" href="#list-contact" role="tab" aria-controls="contact">
-                                            <img src="assets/images/franciska_du_toit_flyux-project.png" width="25" alt="">
+                                            <a class=" inline-block tab-link list-group-item timeline-event list-group-item-action " id="list-contact-list" data-toggle="list" href="#list-contact" role="tab" aria-controls="contact">
+                                            <img src="assets/images/franciska_du_toit_flyux-project.png" class="cpy-img" width="25" alt="">
                                             </a>
                                         </div>
+                                    </div>
                                     </div>
                         <!-- Project timeline -->
                         <!-- Project timeline detail -->
@@ -136,7 +138,8 @@
                                         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <div class="project-img" style="background-image: url(assets/images/franciska_du_toit_sanlam-synergy-project-image.png);">
+                                                    <div class="col-sm-12 col-md-12 ">
+                                                        <img src="assets/images/franciska_du_toit_synergyproject.png" class="project-img" alt="project synergy screenshot">
                                                     </div>
                                                 </div>
                                                 <div class="col-12">
@@ -154,7 +157,8 @@
                                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <div class="project-img" style="background-image: url(assets/images/franciska_du_toit_fincede-project-image.png);">
+                                                    <div class="col-sm-12 col-md-12 ">
+                                                        <img src="assets/images/franciska_du_toit_fincedeproject.png" class="project-img" alt="project synergy screenshot">
                                                     </div>
                                                 </div>
                                                 <div class="col-12">
@@ -172,7 +176,8 @@
                                         <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <div class="project-img" style="background-image: url(assets/images/franciska_du_toit_sanlam-conversations-project-image.png);">
+                                                    <div class="col-sm-12 col-md-12 ">
+                                                        <img src="assets/images/franciska_du_toit_conversationsproject.png" class="project-img" alt="project synergy screenshot">
                                                     </div>
                                                 </div>
                                                 <div class="col-12">
@@ -190,7 +195,8 @@
                                         <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <div class="project-img" style="background-image: url(assets/images/franciska_du_toit_leasehub-project.png);">
+                                                    <div class="col-sm-12 col-md-12 ">
+                                                        <img src="assets/images/franciska_du_toit_leasehubproject.png" class="project-img" alt="project synergy screenshot">
                                                     </div>
                                                 </div>
                                                 <div class="col-12">
@@ -208,7 +214,8 @@
                                         <div class="tab-pane fade" id="list-contact" role="tabpanel" aria-labelledby="list-contact-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <div class="project-img" style="background-image: url(assets/images/franciska_du_toit_flyuxmobile-project.png);">
+                                                    <div class="col-sm-12 col-md-12 ">
+                                                        <img src="assets/images/franciska_du_toit_flyuxmobile-project.png" class="project-img" alt="project synergy screenshot">
                                                     </div>
                                                 </div>
                                                 <div class="col-12">
@@ -224,18 +231,9 @@
                                         <!-- Fly UX End -->    
                                     </div>
                         <!-- Project timeline detail end -->
-                        <!-- Go to projects button -->
-                                <div class="btn-container">
-                                    <div class="center-btn">
-                                        <button type="button" id="about-btn" class="btn btn-sm">See All Projects
-                                        <a href="portfolio.html"></a>
-                                        </button>
-                                    </div>
-                                </div>
-                        <!-- Go to projects button -->
                             </div>
                     <!-- Project end -->
-                    <!-- Qualifications -->
+                <!-- Qualifications -->
                             <div class="qualification-container">
                                 <div>
                                     <h1 class="qual-heading" >
