Change cv section on about page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,6 @@
 
 
 <body>
-    <body>
     <!-- Nav Menu Section Code from Bootstrap-->
     <div class="site-header"> 
 	<nav class="navbar navbar-expand-md fixed-top navbar-dark ">
@@ -293,35 +292,22 @@
                                 <!-- Qualifications completed end -->
                             </div>
                             <!-- Qualifications End -->
-                            <!-- CV pdf downlaod -->
+                            <!-- CV pdf download -->
                             <div>
                                 <p class="cv-text">Download a full PDF version of my CV
-                                    <a href="#" target="_blank" class="cv-pdf">
+                                    <a href="assets/documents/franciska-du-toit-cv-2021.pdf" target="_blank" class="cv-pdf">
                                     <i class="fa fa-download" aria-hidden="true"></i>
                                         <span class="sr-only">Download link.</span>
                                     </a>
                                 </p>
                             </div>
-                            <!-- CV pdf downlaod -->
-                        </div>
+                            <!-- CV pdf download -->
                         </div>
                     </div>
+                    <!-- Content Section -->
                 </div>
             </div>
-        </section>
-        <!-- Social Footer for mobile and tablet end -->
-        <section class="hero-image-footer-mobile">
-            <ul class="social-list">
-                <li><a href="https://www.linkedin.com/in/franciskadutoit" target="_blank" class="linkedin social-icon"><i class="fab fa-linkedin-in "></i></a></li>
-                <li><a href="https://www.instagram.com/designed.byfranciska/" target="_blank" class="linkedin social-icon"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://twitter.com/FranciskaDuToit" target="_blank" class="linkedin social-icon"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.pinterest.ie/franciskadtt/_saved/" target="_blank" class="linkedin social-icon"><i class="fab fa-pinterest-p"></i></a></li>
-            </ul>
-        </section>
-        <!-- Social Footer for mobile and tablet end -->
-    </section>
-    <!-- Content section end -->
-    </div>
+            
 <!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
