Add new synergy project image

--- a/about.html
+++ b/about.html
@@ -111,22 +111,32 @@
                                 <div class="container">
                                     <div class="row project-timeline-tab">
                                         <div class="col project-list list-group" id="list-tab" role="tablist">
+                                            <!-- Synergy Project -->
                                             <a class=" inline-block tab-link list-group-item list-group-item-action active timeline-event"
-                                            id="list-home-list"  href="#list-home" role="tab" data-toggle="list" aria-controls="home">
+                                            id="list-synergy-list"  href="#list-synergy" role="tab" data-toggle="list" aria-controls="home">
                                                 <img src="assets/images/franciska_du_toit_sanlam-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a class=" inline-block tab-link list-group-item list-group-item-action  timeline-event" id="list-profile-list" data-toggle="list"  href="#list-profile" role="tab" aria-controls="profile">
+                                            <!-- Synergy Project End -->
+                                            <!-- Fincede Project -->
+                                            <a class=" inline-block tab-link list-group-item list-group-item-action  timeline-event" id="list-fincede-list" data-toggle="list"  href="#list-fincede" role="tab" aria-controls="profile">
                                                 <img src="assets/images/franciska_du_toit_fincede-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a  class="inline-block tab-link list-group-item list-group-item-action " id="list-messages-list timeline-event"  href="#list-messages" data-toggle="list" role="tab" aria-controls="messages">
+                                            <!-- Fincede Project End -->
+                                            <!-- Conversations Project -->
+                                            <a  class="inline-block tab-link list-group-item list-group-item-action " id="list-conversations-list timeline-event"  href="#list-conversations" data-toggle="list" role="tab" aria-controls="messages">
                                                 <img src="assets/images/franciska_du_toit_sanlam-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a class="inline-block tab-link list-group-item list-group-item-action " id="list-settings-list timeline-event" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">
+                                            <!-- Conversations Project End -->
+                                            <!-- Leasing Hub  -->
+                                            <a class="inline-block tab-link list-group-item list-group-item-action " id="list-hub-list timeline-event" data-toggle="list" href="#list-hub" role="tab" aria-controls="settings">
                                             <img src="assets/images/franciska_du_toit_quadient-project.png" class="cpy-img" width="25" alt="">
                                             </a>
-                                            <a class=" inline-block tab-link list-group-item timeline-event list-group-item-action " id="list-contact-list" data-toggle="list" href="#list-contact" role="tab" aria-controls="contact">
+                                            <!-- Leasing Hub End-->
+                                            <!-- Fly UX -->
+                                            <a class=" inline-block tab-link list-group-item timeline-event list-group-item-action " id="list-fly-list" data-toggle="list" href="#list-fly" role="tab" aria-controls="contact">
                                             <img src="assets/images/franciska_du_toit_flyux-project.png" class="cpy-img" width="25" alt="">
                                             </a>
+                                            <!-- Fly UX End -->
                                         </div>
                                     </div>
                                     </div>
@@ -134,7 +144,7 @@
                         <!-- Project timeline detail -->
                                     <div class="project-content tab-content" id="nav-tabContent">
                                         <!-- Synergy Project -->
-                                        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                        <div class="tab-pane fade show active" id="list-synergy" role="tabpanel" aria-labelledby="list-synergy-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
                                                     <div class="col-sm-12 col-md-12 ">
@@ -153,7 +163,7 @@
                                         </div>
                                         <!-- Synergy Project End -->
                                         <!-- Fincede Project -->
-                                        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                        <div class="tab-pane fade" id="list-fincede" role="tabpanel" aria-labelledby="list-fincede-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
                                                     <div class="col-sm-12 col-md-12 ">
@@ -172,7 +182,7 @@
                                         </div>
                                         <!-- Fincede Project End -->
                                         <!-- Conversations Project -->
-                                        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                        <div class="tab-pane fade" id="list-conversations" role="tabpanel" aria-labelledby="list-conversations-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
                                                     <div class="col-sm-12 col-md-12 ">
@@ -191,7 +201,7 @@
                                         </div> 
                                         <!-- Conversations Project End -->
                                         <!-- Leasing Hub -->
-                                        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                        <div class="tab-pane fade" id="list-hub" role="tabpanel" aria-labelledby="list-hub-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
                                                     <div class="col-sm-12 col-md-12 ">
@@ -210,7 +220,7 @@
                                         </div>
                                         <!-- Leasing Hub End -->
                                         <!-- Fly UX -->
-                                        <div class="tab-pane fade" id="list-contact" role="tabpanel" aria-labelledby="list-contact-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
+                                        <div class="tab-pane fade" id="list-fly" role="tabpanel" aria-labelledby="list-fly-list" style="opacity: 1; transition: opacity 300ms ease-in-out 0s;">
                                             <div class="row">
                                                 <div class="col-12">
                                                     <div class="col-sm-12 col-md-12 ">
@@ -307,7 +317,7 @@
                     <!-- Content Section -->
                 </div>
             </div>
-            
+
 <!-- Scripts -->   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
